qotd-pdf-service/deployment/all-in-one.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qotd-pdf
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-pdf
  template:
    metadata:
      labels:
        app: qotd-pdf
    spec:
      restartPolicy: Always
      containers:
        - name: qotd-pdf
          image: registry.gitlab.com/quote-of-the-day/qotd-pdf-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3005
              protocol: TCP
            - name: svc
              containerPort: 8085
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "25m"
              memory: "300Mi"
            limits:
              cpu: "200m"
              memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-pdf
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
      name: http
  selector:
    app: qotd-pdf
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-pdf-svc
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
      name: svc
  selector:
    app: qotd-pdf
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-pdf
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  subdomain: ''
  to:
    kind: Service
    name: qotd-pdf
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-pdf-svc
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  subdomain: ''
  to:
    kind: Service
    name: qotd-pdf-svc
    weight: 100
  port:
    targetPort: svc
  wildcardPolicy: None
